[gd_scene load_steps=14 format=3 uid="uid://clnxxj7xyissd"]

[ext_resource type="Script" uid="uid://bi35r6h88ai3x" path="res://player/PlayerHUD.gd" id="1_0phdd"]
[ext_resource type="Texture2D" uid="uid://dn00wae1rpmih" path="res://cards/assets/card_blank.png" id="2_6xiqn"]
[ext_resource type="Theme" uid="uid://cdta86b2s4dni" path="res://assets/themes/global_theme.tres" id="2_uesto"]
[ext_resource type="Texture2D" uid="uid://df5mokjeq6fff" path="res://asi/sitting/asi_dark_lineless.png" id="3_3qydx"]
[ext_resource type="Texture2D" uid="uid://dq13k0w50lphx" path="res://assets/ui/sword.png" id="3_17rot"]
[ext_resource type="Texture2D" uid="uid://bhoj87yuq6iyx" path="res://assets/ui/segment_empty.png" id="3_74gtv"]
[ext_resource type="Texture2D" uid="uid://c1rip6bh6ciwa" path="res://assets/ui/skull.png" id="3_p4rvo"]
[ext_resource type="Texture2D" uid="uid://3hejcvufsjak" path="res://assets/ui/segment_full.png" id="4_3qydx"]
[ext_resource type="Texture2D" uid="uid://bfsd0cekcrefe" path="res://assets/ui/shield.png" id="5_djcq1"]
[ext_resource type="Texture2D" uid="uid://ih76gffcaf08" path="res://assets/ui/segment_empty_vertical.png" id="7_mkbi4"]
[ext_resource type="Texture2D" uid="uid://dgpgst7wjcb1p" path="res://assets/ui/segment_full_vertical.png" id="8_uesto"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_17rot"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cjc2p"]

[node name="PlayerHUD" type="Control" node_paths=PackedStringArray("CardImage", "PlayerAttack", "HealthSegments", "HealthEmpty", "HealthFull", "DefenseSegments", "DefenseEmpty", "DefenseFull")]
custom_minimum_size = Vector2(160, 236)
layout_mode = 3
anchors_preset = 0
offset_right = 160.0
offset_bottom = 210.0
script = ExtResource("1_0phdd")
CardImage = NodePath("VBoxContainer/HBoxContainer/PlayerCard/CardImage")
PlayerAttack = NodePath("VBoxContainer/HBoxContainer3/PlayerAttack")
HealthSegments = NodePath("VBoxContainer/HBoxContainer2/HealthBar")
HealthEmpty = NodePath("VBoxContainer/HBoxContainer2/HealthBar/Empty")
HealthFull = NodePath("VBoxContainer/HBoxContainer2/HealthBar/Empty/Full")
DefenseSegments = NodePath("VBoxContainer/HBoxContainer/DefenseBar/VBoxContainer/DefenseBar")
DefenseEmpty = NodePath("VBoxContainer/HBoxContainer/DefenseBar/VBoxContainer/DefenseBar/Empty")
DefenseFull = NodePath("VBoxContainer/HBoxContainer/DefenseBar/VBoxContainer/DefenseBar/Empty/Full")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_right = 160.0
offset_bottom = 210.0

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="PlayerAttack" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme = ExtResource("2_uesto")
theme_type_variation = &"HeadingLabel"
theme_override_font_sizes/font_size = 18
text = "0"

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
texture = ExtResource("3_17rot")
expand_mode = 3
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PlayerCard" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
self_modulate = Color(0.0745098, 0.0901961, 0.137255, 1)
clip_children = 2
layout_mode = 2
texture = ExtResource("2_6xiqn")
stretch_mode = 5

[node name="CardImage" type="TextureRect" parent="VBoxContainer/HBoxContainer/PlayerCard"]
clip_children = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -114.0
offset_top = 1.0
offset_right = 287.0
offset_bottom = 115.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_3qydx")
expand_mode = 3
stretch_mode = 5

[node name="DefenseBar" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 10
alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/DefenseBar"]
layout_mode = 2
alignment = 2

[node name="DefenseBar" type="PanelContainer" parent="VBoxContainer/HBoxContainer/DefenseBar/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_17rot")

[node name="Empty" type="TextureRect" parent="VBoxContainer/HBoxContainer/DefenseBar/VBoxContainer/DefenseBar"]
custom_minimum_size = Vector2(16, 9)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("3_74gtv")
expand_mode = 1
stretch_mode = 1

[node name="Full" type="TextureRect" parent="VBoxContainer/HBoxContainer/DefenseBar/VBoxContainer/DefenseBar/Empty"]
modulate = Color(0.545098, 1, 0.996078, 1)
custom_minimum_size = Vector2(16, 9)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_3qydx")
expand_mode = 1
stretch_mode = 1

[node name="DefenseIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer/DefenseBar/VBoxContainer"]
modulate = Color(0.545098, 1, 0.996078, 1)
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture = ExtResource("5_djcq1")
expand_mode = 3
stretch_mode = 5

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HealthIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
modulate = Color(0.996078, 0.388235, 0.886275, 1)
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture = ExtResource("3_p4rvo")
expand_mode = 3
stretch_mode = 5

[node name="HealthBar" type="PanelContainer" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_cjc2p")

[node name="Empty" type="TextureRect" parent="VBoxContainer/HBoxContainer2/HealthBar"]
custom_minimum_size = Vector2(9, 16)
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("7_mkbi4")
expand_mode = 1
stretch_mode = 1

[node name="Full" type="TextureRect" parent="VBoxContainer/HBoxContainer2/HealthBar/Empty"]
modulate = Color(0.996078, 0.388235, 0.886275, 1)
custom_minimum_size = Vector2(9, 16)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_uesto")
expand_mode = 1
stretch_mode = 1

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
